# improvado

./: README.md  pyproject.toml
examples/: some_user_friends.csv  some_user_friends.json  some_user_friends.tsv
improvado/: README.md  config.py  exceptions.py  logger.py
improvado/cli/: generate_report.py
improvado/clients/: base.py  vk_client.py
improvado/dataschemas/: dictionary.py  request.py  response.py  user.py
improvado/examples/: some_user_friends.csv  some_user_friends.json  some_user_friends.tsv
improvado/services/: __init__.py  base.py  csv_report_generator.py  get_report_generator.py  json_report_generator.py  tsv_report_generator.py  utils.py
tests/: test_get_report_generator.py
