[tool.poetry]
name = "improvado"
version = "0.1.0"
description = ""
authors = ["Denis Bolovin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
click = "^8.1.3"
loguru = "^0.6.0"
pandas = "^1.5.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
improvado = "improvado.cli.generate_report:cli_command"
